--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:color="http://www.w3.org/1999/xhtml"
-      xmlns:border="http://www.w3.org/1999/xhtml">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/CSS/home.css"/>
 <body>
 <div id="member-load" th:insert="~{fragments/MemberInformation :: MemberInformation}"></div>
@@ -37,12 +36,18 @@
             <br>
 
             <label for="userId">아이디</label>
-            <input type="text" id="userId" name="userId" placeholder="아이디를 입력하세요">
+            <input type="text" id="userId" name="userId" placeholder="아이디를 입력하세요"
+                   onblur="checkUserId()">
+            <!-- 결과를 표시할 메시지 -->
+            <p id="userIdMessage"></p>
 
             <br>
 
             <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요">
+            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요"
+                   onblur="checkPassword()">
+            <!-- 결과를 표시할 메시지 -->
+            <p id="passwordMessage"></p>
 
             <br>
 
@@ -58,5 +63,6 @@
 <script src="/JS/home.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/JS/email.js"></script>
+<script src="/JS/security.js"></script>
 </body>
 </html>
