--- a/src/main/resources/templates/vote.html
+++ b/src/main/resources/templates/vote.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,6 +29,8 @@
             </div>
         </div>
     </div>
+
+    <li><a href="/notice/setting">투표 주제 설정</a></li>
 </main>
 <script src="/JS/home.js"></script>
 </body>
