--- a/src/main/resources/templates/voteSetting.html
+++ b/src/main/resources/templates/voteSetting.html
@@ -39,17 +39,6 @@
 </main>
 
 <script src="/JS/home.js"></script>
-<script>
-    function addOption() {
-        // 선택지 입력 칸을 동적으로 추가하는 함수
-        var optionsDiv = document.getElementById('options');
-
-        var newOptionInput = document.createElement('input');
-        newOptionInput.type = 'text';
-        newOptionInput.name = 'options';
-        newOptionInput.placeholder = '선택지';
-        optionsDiv.appendChild(newOptionInput);
-    }
-</script>
+<script src="/JS/vote.js"></script>
 </body>
 </html>
